# fhgr-stereo-vision

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: CI.yaml
.run/: stereo-vision-calibrate (lighthouse).run.xml  stereo-vision-calibrate (live).run.xml  stereo-vision-calibrate (v1).run.xml  stereo-vision-livecam.run.xml  stereo-vision-static-image (bottle, image pair).run.xml  stereo-vision-static-image (folder).run.xml  stereo-vision-static-image (image pair).run.xml  stereo-vision-static-image (lighthouse, folder).run.xml  stereo-vision-static-image (lighthouse, image pair).run.xml  stereo-vision-static-image (test-images, image-pair).run.xml  stereo-vision-static-image (v1, folder).run.xml
apps/: CMakeLists.txt
apps/calibrate/: CMakeLists.txt  CalibrationRun.cpp  CalibrationRun.hpp  README.md  calibration.cpp  calibration.hpp  livecam-main.cpp  main.cpp  static-image-main.cpp
apps/livecam/: CMakeLists.txt  README.md
apps/static-image/: CMakeLists.txt  README.md  Viewer.cpp  Viewer.hpp  main.cpp
apps/static-image/FindSaveIMG_FeatureDetect/: CMakeLists.txt  README.md  SavingIMGs.cpp
apps/stereo-vision/: CMakeLists.txt  README.md  Viewer.cpp  Viewer.hpp  livecam-main.cpp
include/: gcc-bug-117560-workaround.hpp
include/stereo-vision-lib/: StereoCameraInfo.hpp  lib.hpp
resources/calibration/lighthouse-simulation/: README.md  calibration.yml  config.yml  rename_images.sh
resources/calibration/live/: .gitignore
resources/calibration/v1/: calibration.yml  config.yml
resources/calibration/v2/: calibration.yml  config.yml
src/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt  stereo-vision-lib-test.cpp
